2010-12-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/save.c src/set.c src/show.c src/tables.c
	src/tables.h src/unset.c docs/gnuplot.doc: 'set pointintervalbox'.

2010-12-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): Casting to a float may have been clever, but
	we can't afford the loss of precision (fails for time coordinates).

2010-11-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/gadgets.h src/graphics.c demo/dashcolor.dem:
	Fix breakage to the pointinterval property.
	Add a demo plot illustrating pointinterval.

2010-11-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_common.js:  Rotated text should be zoomed also.
	* term/js/gnuplot_mouse.js:   Avoid negative height or width.
	* term/canvas.trm: Avoid zero or negative size points.

2010-11-20  Casey Carter   <ctcarter@users.sourceforge.net>

	* demo/html/index.canvas demo/html/index.save demo/html/index.svg 
	term/canvas.trm:  syntax error in link record of standalone mode.

2010-11-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c: save output for "set view" could not be read in

2010-11-12  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc command.c (help_command) util.h:
	"help" was collapsing all text to lower case, which broke "help 3D".
	Remove a vestigial call to lower_case().  Also make sure it is indexed.

2010-10-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3dcolors.dem: Added first page with multiple palettes. Show
	color ranges in [0:1].

2010-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Prevent out-of-range boxes from creating
	degenerate invisible boxes in the output file.  This can reduce file
	size for vector format output.
	Bug #3096750

2010-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_fillstyle):  Allow "border" as a keyword without